data/all_generated_tests/raw_wast_tests/call_UnreachableCodeExecution_3287.wast
;; 6. **Test 6: Call with Type Mismatch**    - Design a test where the called function expects different types than what the `call` instruction provides, leading to a type mismatch.    - **Specific Constraint**: Ensures that type mismatches are caught and proper error handling prevents 'unreachable' execution.    - **Test Relation**: Incorrect type handling might push the function erroneously to an 'unreachable' control path.

(assert_invalid
  (module
    (func $type-mismatch (call 1 (i32.const 1) (f32.const 3.5)))
    (func (param i32 i32))
  )
  "type mismatch"
)